--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "doctrine/orm": "^2.5",
     "gedmo/doctrine-extensions": "^2.4",
     "symfony/event-dispatcher": "~3.0",
-    "psr/log": "^1.0",
-    "twig/twig": "^2.4"
+    "psr/log": "^1.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^5.7",
