--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
   "require": {
     "php": "^7.0",
     "symfony/console": "~3.0|~4.0",
-    "symfony/dependency-injection": "~3.0|~4.0"",
-    "symfony/config": "~3.0|~4.0"",
-    "symfony/http-kernel": "~3.0|~4.0"",
+    "symfony/dependency-injection": "~3.0|~4.0",
+    "symfony/config": "~3.0|~4.0",
+    "symfony/http-kernel": "~3.0|~4.0",
     "doctrine/common": "^2.7",
     "doctrine/orm": "^2.5",
     "gedmo/doctrine-extensions": "^2.4",
