--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "doctrine/common": "^2.7",
     "doctrine/orm": "^2.5",
     "gedmo/doctrine-extensions": "^2.4",
-    "symfony/event-dispatcher": "~3.0",
+    "symfony/event-dispatcher": "~3.0|~4.0",
     "psr/log": "^1.0"
   },
   "require-dev": {
